gccida/g1/simplify_ternary_operation
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2822:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2823:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2824:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2843:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v25; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2858:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( ( mode_class_0[mode] & 0xFFFFFFFB) == 2 || mode_class_0[mode] == MODE_VECTOR_FLOAT) 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2858:49: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( ( mode_class_0[mode] & 0xFFFFFFFB) == 2 || mode_class_0[mode] == MODE_VECTOR_FLOAT) 
                                                ^~~~~~~~~~~~
                                                mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2865:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( ( mode_class_0[mode] & 0xFFFFFFFB) == 2 || mode_class_0[mode] == MODE_VECTOR_FLOAT) 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2865:49: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( ( mode_class_0[mode] & 0xFFFFFFFB) == 2 || mode_class_0[mode] == MODE_VECTOR_FLOAT) 
                                                ^~~~~~~~~~~~
                                                mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2877:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)op0->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2887:40: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v21 = simplify_relational_operation( ( rtx_code)*( _WORD *)op0, op0_mode, v19.rtx, *( rtx *)&op0[1]); 
                                       ^~~~~~~~
                                       rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2887:49: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v21 = simplify_relational_operation( ( rtx_code)*( _WORD *)op0, op0_mode, v19.rtx, *( rtx *)&op0[1]); 
                                     ~~~~~~~~~~~^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2904:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v23.rtwint = ( __int64)op1->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2905:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v24.rtwint = ( __int64)op2->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2934:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)op1->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/simplify-rtx.c:2935:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)op2->fld[0]; 
                       ^~~~~~~~~~~
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_ternary_operation/src/obj/simplify-rtx.o] Error 1
